Add missing casts-to-int to int/uint16 comparisons.

These are required to avoid compilation errors due to signed/unsigned
comparison, on some toolchains (specifically Clang/Fuchsia).

Bug: chromium:839351
Change-Id: I52e726acd4e8d6744e98d7583bc82fcec81060d9
Reviewed-on: https://webrtc-review.googlesource.com/74100
Commit-Queue: Wez <wez@google.com>
Reviewed-by: Tommi <tommi@webrtc.org>
Reviewed-by: Henrik Boström <hbos@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#23109}